# attendance-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  exceptions.py  main.py  marking.py  models.py  nginx.conf  page.html  pyproject.toml  requirements.txt  response-template.html
.github/workflows/: ci.yml
api/: routes.py
app/: main.py  marking.py
app/api/: __init__.py
app/exceptions/: __init__.py
app/models/: __init__.py
app/repositories/: attendance_credentials_repository.py  attendance_repository.py
app/services/: attendance_credentials_service.py  attendance_service.py  auth_service.py  marking_service.py  whatsapp_service.py
services/: attendance_service.py  auth_service.py
src/api/: __init__.py
src/core/: config.py
src/exceptions/: __init__.py
src/models/: __init__.py
src/services/: attendance_credentials_repository.py  attendance_credentials_service.py  attendance_repository.py  attendance_service.py  auth_service.py  marking_service.py  whatsapp_service.py
src/tests/: conftest.py  test_attendance.py  test_attendance_credentials.py  test_health.py  test_timezones.py
supabase/: config.toml
supabase/migrations/: 20251102004453_create_attendance_schema.sql  20251103000000_allow_empty_schedule_days.sql  20251103010000_add_attendance_events_and_random_window.sql  20251103020000_add_phone_number_to_attendance_records.sql  20251103030000_add_notified_at_to_attendance_events.sql  20251104002000_add_attendance_credentials.sql  (+1 more)
tests/: test_health.py
utils/: html.py  location.py  time.py
(+13 files in other folders)
