[project]
name = "attendance-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.128.0",
    "postgrest>=2.27.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "supabase>=2.27.1",
]

[dependency-groups]
dev = [
    "lint>=1.2.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
